# distributed_test

./: README.md  benchmark.sh  codeOriginel  code_originel.c  requirements.txt  text.txt
haskell/: benchmark.sh  benchmark_divide_and_conquer.sh  benchmark_naive.sh  diagram.ipynb  haskell-totient  haskell-totient.aux  haskell-totient.cabal  haskell-totient.eventlog  haskell-totient.eventlog.html  haskell-totient.hp  haskell-totient.hp.html  haskell-totient.prof  haskell-totient.ps  main.py  pyproject.toml  runtime.csv  runtime_100000_haskell.csv  runtime_dnc_haskell.csv  runtime_reference.csv  runtime_test.csv  runtimefirst_test.csv  runtimetest.csv  test.ipynb
haskell/.stack-work/: stack.sqlite3
haskell/.stack-work/install/x86_64-linux-tinfo6/681c848495ef6ccb45a5c3b36c0d47879c6cb7159cde1df4c68392d1534c6ca4/8.6.5/pkgdb/: haskell-totient-0.1.0.0-26jB4RWCGzY8Cat8UrXzSC.conf  package.cache
haskell/app/: Main.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.6.7/: haskell-totient-0.1.0.0-inplace.conf  package.cache
haskell/dist-newstyle/packagedb/ghc-9.8.1/: haskell-totient-0.1.0.0-inplace.conf  package.cache
haskell/dist-newstyle/tmp/environment.-410467/: .ghc.environment.x86_64-linux-9.6.7
haskell/dist-newstyle/tmp/environment.-59600/: .ghc.environment.x86_64-linux-9.8.1
haskell/src/: TotientRange.hs
openMP/: Makefile  TotientRange.c  benchmark.sh  diagram.ipynb  naive_benshmark.sh  naive_runtime.csv  runtime.csv  totient  (+2 more)
