cabal-version: 1.12
name:           haskell-totient
version:        0.1.0.0
description:    Parallel Haskell implementation of Totient Range
author:         Rob Stewart
maintainer:     R.Stewart@hw.ac.uk
copyright:      2020 Heriot-Watt University
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  hs-source-dirs:  src
  exposed-modules: TotientRange
  build-depends:   base >= 4.7 && < 5,
                   parallel
  default-language: Haskell2010

executable haskell-totient
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -eventlog
  build-depends:
      base >=4.7 && <5,
      deepseq,
      criterion-measurement,      
      haskell-totient
  default-language: Haskell2010
